--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,17 +1,23 @@
-name: Update README
+name: Update Activity
+
+permissions:
+  contents: write
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 */8 * * *'
   workflow_dispatch:
 
 jobs:
-  build:
+  update-activity:
     runs-on: ubuntu-latest
-    name: Update this repo's README with recent activity
-
     steps:
-      - uses: actions/checkout@v1
-      - uses: jamesgeorge007/github-activity-readme@master
+      - uses: actions/checkout@v3
+        
+      - name: Update README with GitHub Activity
+        uses: TheDudeThatCode/github-readme-activity@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          COMMIT_MSG: '⚡ Update README with the recent activity'
+          MAX_LINES: 10
